--- a/tissue-ptr.Rnw
+++ b/tissue-ptr.Rnw
@@ -148,13 +148,13 @@ dev.off()
 \centering
 \begin{subfigure}{.4\textwidth}
   \centering
-  \includegraphics[.4\textwidth]{\string Figs/1a_mrna_v_protein.png}
+  \includegraphics[width=\textwidth]{\string Figs/1a_mrna_v_protein.png}
   \caption{A subfigure}
   \label{fig:sub1}
 \end{subfigure}%
 \begin{subfigure}{.4\textwidth}
   \centering
-  \includegraphics[.4\textwidth]{\string Figs/1b_mrna_v_protein_segs_new.pdf}
+  \includegraphics[width=\textwidth]{\string Figs/1b_mrna_v_protein_segs_new.pdf}
   \caption{A subfigure}
   \label{fig:sub2}
 \end{subfigure}
@@ -270,7 +270,7 @@ dev.off()
 
 \section*{Figure 5}
 
-<<fig.width=4,fig.height=4,fig.align='center',label=figure-5, dependson("initialize"),echo=FALSE,warning=FALSE>>=
+<<fig.show='hide',label=figure-5, dependson("initialize"),echo=FALSE,warning=FALSE>>=
 
 n.prot <- rowSums(!is.na(protein))
 sd.prot.err <- uniroot(function(x) pnorm(log10(1.5),mean=0,sd=x)-0.75,lower=0,upper=10)$root
@@ -360,7 +360,7 @@ ggplot(data.frame(x=mrna.reliabilities))+geom_histogram(aes(x=x,fill="mRNA"),col
           axis.title.x = element_text(face="bold",size=25),
           axis.text.x  = element_text(size=16),
           axis.text.y  = element_text(size=16,hjust=0)) +
-    scale_x_continuous(limits=c(0,1))+
+    scale_x_continuous(limits=c(-1,1))+
     guides(fill=FALSE)
 dev.off()
 
@@ -391,9 +391,17 @@ print(med.p2)
 
 tmp <- sapply(prows,function(i) cor((protein[i,pcols]+protein2[i,pcols])/2,mrna[i,pcols],use="pairwise.complete.obs"))
 
+p1.reliability <- med.prot*pop.cor/med.p2
+p2.reliability <- med.prot*med.p2/pop.cor
+
+
 ## TODO: FIGURE
 
 @ 
+
+Reliability of \Sexpr{focus.data} is: \Sexpr{p1.reliability}\\
+Reliability of \Sexpr{data2} is: \Sexpr{p2.reliability}
+
 
 \begin{figure}
 \centering
@@ -411,7 +419,7 @@ tmp <- sapply(prows,function(i) cor((protein[i,pcols]+protein2[i,pcols])/2,mrna[
 \end{subfigure}
 \begin{subfigure}{.3\textwidth}
   \centering
-  \includegraphics[width=\textwidth]{\string Figs/5a-fold_error_v_reliability.pdf}
+  \includegraphics[width=\textwidth]{\string Figs/5e-noise-correction.pdf}
   \caption{A subfigure}
   \label{fig:sub2}
 \end{subfigure}
@@ -421,18 +429,15 @@ tmp <- sapply(prows,function(i) cor((protein[i,pcols]+protein2[i,pcols])/2,mrna[
 
 
 \section*{Figures S1}
-<<fig.width=4,fig.height=4,fig.align='center',label=figure-s1, dependson("initialize"),echo=FALSE,warning=FALSE>>=
+<<fig.show='hide',label=figure-s1, dependson("initialize"),echo=FALSE,warning=FALSE>>=
 
 ## noise corrected 
 sd.mrnas <- apply(mrna, 1, function(x) sd(x,na.rm=TRUE))
 sd.prots <- apply(protein, 1, function(x) sd(x,na.rm=TRUE))
 ## temporary
 sd.mrnas.corrected <- sqrt(sd.mrnas^2*med.mrna)
-sd.prots.corrected <- sqrt(sd.prots^2*med.prot)
+sd.prots.corrected <- sqrt(sd.prots^2*p1.reliability)
 sd.diffs.corrected <- sd.prots.corrected-sd.mrnas.corrected
-summary(sd.diffs.corrected)
-hist(sd.diffs.corrected,breaks=50)
-abline(v=0,col="red")
 
 pdf("Figs/physiological_sds.pdf")
 ggplot(data.frame(x=sd.mrnas.corrected,x2=sd.prots.corrected),labels=c("mRNA","protein"))+geom_histogram(aes(x=x,fill="mRNA"),binwidth=0.03,colour="black",size=0.1,alpha=1)+geom_histogram(aes(x=x2,fill="protein"),binwidth=0.03,colour="black",size=0.1,alpha=0.5)+scale_x_continuous(limits=c(0,1.5))+labs(x="Standard Deviation",y="Count")+
@@ -447,7 +452,7 @@ dev.off()
 
 pdf("Figs/sds-diff.pdf")
 ggplot(data.frame(x=(sd.prots.corrected-sd.mrnas.corrected)))+geom_histogram(aes(x=x,fill="protein-mRNA"),binwidth=0.05,colour="black",size=0.1,alpha=1)+
-    scale_x_continuous(limits=c(-1,1))+
+    scale_x_continuous(limits=c(-1.5,1.5))+
 labs(x="Difference in Standard Deviation",y="Count")+
     theme(axis.title.x = element_text(face="bold",size=25),
           axis.text.x  = element_text(size=16),
@@ -458,13 +463,30 @@ labs(x="Difference in Standard Deviation",y="Count")+
      guides(fill=guide_legend(title=NULL))+geom_vline(xintercept=0,size=1.5)
 dev.off()
 
+median(sd.prots.corrected/sd.mrnas.corrected,na.rm=TRUE)
 @ 
 
-
+\begin{figure}
+\centering
+\begin{subfigure}{.4\textwidth}
+  \centering
+  \includegraphics[width=\textwidth]{\string Figs/physiological_sds.pdf}
+  \caption{A subfigure}
+  \label{fig:sub1}
+\end{subfigure}%
+\begin{subfigure}{.4\textwidth}
+  \centering
+  \includegraphics[width=\textwidth]{\string Figs/sds-diff.pdf}
+  \caption{A subfigure}
+  \label{fig:sub2}
+\end{subfigure}
+\caption{A figure with two subfigures}
+\label{fig:test}
+\end{figure}
 
 \section*{Figure S2}
 
-<<results='hide',fig.height=8,fig.width=12, label=figure-slope,dependson=c("initialize"),echo=FALSE,warning=FALSE>>=
+<<results='hide',fig.show='hide', label=figure-slope,dependson=c("initialize"),echo=FALSE,warning=FALSE>>=
 slps <- c()
 for(i in rownames(protein)){
     p <- protein[i,]
@@ -475,80 +497,86 @@ for(i in rownames(protein)){
     }
 }
 colnames(slps) <- c("OLS","MA","SMA","RMA")
-@ 
 
-\section*{Figure X}
+protein.vec <- as.numeric(t(protein-apply(protein,1,function(x) median(x,na.rm=TRUE))))
+mrna.vec <- as.numeric(t(mrna-apply(mrna,1,function(x) median(x,na.rm=TRUE))))
+plot(mrna.vec,protein.vec,pch=19,cex=0.1)
+abline(a=0,b=1)
 
-<<results='hide',fig.height=8,fig.width=12, label=figure-X,dependson=c("initialize"),echo=FALSE,warning=FALSE>>=
-
-    grid.newpage()
-pushViewport(viewport(layout = grid.layout(2,3)))
-
-fold.comparison.tissues <- c("prostate","kidney","thyroid.gland")
-fold.combos <- combn(fold.comparison.tissues,2)
-
-for(i in 1:ncol(fold.combos)){
-
-    t1 <- fold.combos[1,i]
-    t2 <- fold.combos[2,i]
-
-    pred <- log10(tissue.ratios[,t2]*10^mrna[,t1])
-    raw <- protein[,t1]
-    keep <- which(pred!=raw)
-    pred <- pred[keep]
-    raw <- raw[keep]
-    cor.raw <- cor(pred,raw,use="complete.obs")^2
-    
-print(
-        ggplot(data=data.frame(mrna=pred,protein=raw))+geom_point(aes(x=mrna,y=protein),colour="blue",alpha=0.3)+
-        scale_x_continuous(breaks=1:10,labels=function(x) parse(text=paste("10^", x)),limits=c(2,8))+
-        scale_y_continuous(breaks=1:10,labels=function(x) parse(text=paste("10^", x)),limits=c(2,8))+
-        labs(x=sprintf("%s mRNA scaled by %s PTR",strFormat(t1),strFormat(t2)),
-             y=sprintf("Measured protein in %s",strFormat(t1)))+
-        annotate("text", x = 3, y = 7.5,label=as.character(as.expression(substitute(italic(R)~"="~r,list(r=format(cor.raw,digits=2))))),parse=TRUE,size=10)+
-        annotate("text", x = 3, y = 7,label=as.character(as.expression(substitute(italic(R)^2~"="~r2,list(r2=format(cor.raw^2,digits=2))))),parse=TRUE,size=10)+
-        theme(axis.title.x = element_text(face="bold",size=22),
-          axis.text.x  = element_text(size=30),
-          axis.title.y = element_text(face="bold",size=30),
-              axis.text.y  = element_text(size=30,hjust=0)),
-    vp=viewport(layout.pos.row=1,layout.pos.col=i)
-    )
-
-}
-
-for(i in 1:ncol(fold.combos)){
-
-    t1 <- fold.combos[1,i]
-    t2 <- fold.combos[2,i]
-
-    fold.cor <- cor(mrna[,t1]-mrna[,t2],protein[,t1]-protein[,t2],use="complete.obs")
-
-    print(
-        ggplot(data=data.frame(mrna=10^(mrna[,t1]-mrna[,t2]),protein=10^(protein[,t1]-protein[,t2])))+geom_point(aes(x=mrna,y=protein),colour="blue",alpha=0.3)+
-    scale_x_log10(breaks=10^(-2:2),label=scientific_10,limits=c(10^-2,10^2))+
-    scale_y_log10(breaks=10^(-3:3),labels=scientific_10,limits=c(10^-3,10^3))+
-    labs(x="mRNA Fold Change",y="Protein Fold Change")+
-    annotate("text", x = 10^-1.2, y = 10^2.5,label=as.character(as.expression(substitute(italic(R)~"="~r,list(r=round(fold.cor,digits=3))))),parse=TRUE,size=10)+
-    annotate("text", x = 10^-1.2, y = 10^2,label=as.character(as.expression(substitute(italic(R)^2~"="~r2,list(r2=round(fold.cor^2,digits=3))))),parse=TRUE,size=10)+
-    theme(axis.title.x = element_text(face="bold",size=30),
-          axis.text.x  = element_text(size=30),
-          axis.title.y = element_text(face="bold",size=30),
-          axis.text.y  = element_text(size=30,hjust=0)),
-        vp=viewport(layout.pos.row=2,layout.pos.col=i)        
- )
-    
-    
-    
-    
-}
 @ 
 
 
 
 
+
+%% \section*{Figure X}
+
+%% <<results='hide',fig.height=8,fig.width=12, label=figure-X,dependson=c("initialize"),echo=FALSE,warning=FALSE>>=
+
+%%     grid.newpage()
+%% pushViewport(viewport(layout = grid.layout(2,3)))
+
+%% fold.comparison.tissues <- c("prostate","kidney","thyroid.gland")
+%% fold.combos <- combn(fold.comparison.tissues,2)
+
+%% for(i in 1:ncol(fold.combos)){
+
+%%     t1 <- fold.combos[1,i]
+%%     t2 <- fold.combos[2,i]
+
+%%     pred <- log10(tissue.ratios[,t2]*10^mrna[,t1])
+%%     raw <- protein[,t1]
+%%     keep <- which(pred!=raw)
+%%     pred <- pred[keep]
+%%     raw <- raw[keep]
+%%     cor.raw <- cor(pred,raw,use="complete.obs")^2
+    
+%% print(
+%%         ggplot(data=data.frame(mrna=pred,protein=raw))+geom_point(aes(x=mrna,y=protein),colour="blue",alpha=0.3)+
+%%         scale_x_continuous(breaks=1:10,labels=function(x) parse(text=paste("10^", x)),limits=c(2,8))+
+%%         scale_y_continuous(breaks=1:10,labels=function(x) parse(text=paste("10^", x)),limits=c(2,8))+
+%%         labs(x=sprintf("%s mRNA scaled by %s PTR",strFormat(t1),strFormat(t2)),
+%%              y=sprintf("Measured protein in %s",strFormat(t1)))+
+%%         annotate("text", x = 3, y = 7.5,label=as.character(as.expression(substitute(italic(R)~"="~r,list(r=format(cor.raw,digits=2))))),parse=TRUE,size=10)+
+%%         annotate("text", x = 3, y = 7,label=as.character(as.expression(substitute(italic(R)^2~"="~r2,list(r2=format(cor.raw^2,digits=2))))),parse=TRUE,size=10)+
+%%         theme(axis.title.x = element_text(face="bold",size=22),
+%%           axis.text.x  = element_text(size=30),
+%%           axis.title.y = element_text(face="bold",size=30),
+%%               axis.text.y  = element_text(size=30,hjust=0)),
+%%     vp=viewport(layout.pos.row=1,layout.pos.col=i)
+%%     )
+
+%% }
+
+%% for(i in 1:ncol(fold.combos)){
+
+%%     t1 <- fold.combos[1,i]
+%%     t2 <- fold.combos[2,i]
+
+%%     fold.cor <- cor(mrna[,t1]-mrna[,t2],protein[,t1]-protein[,t2],use="complete.obs")
+
+%%     print(
+%%         ggplot(data=data.frame(mrna=10^(mrna[,t1]-mrna[,t2]),protein=10^(protein[,t1]-protein[,t2])))+geom_point(aes(x=mrna,y=protein),colour="blue",alpha=0.3)+
+%%     scale_x_log10(breaks=10^(-2:2),label=scientific_10,limits=c(10^-2,10^2))+
+%%     scale_y_log10(breaks=10^(-3:3),labels=scientific_10,limits=c(10^-3,10^3))+
+%%     labs(x="mRNA Fold Change",y="Protein Fold Change")+
+%%     annotate("text", x = 10^-1.2, y = 10^2.5,label=as.character(as.expression(substitute(italic(R)~"="~r,list(r=round(fold.cor,digits=3))))),parse=TRUE,size=10)+
+%%     annotate("text", x = 10^-1.2, y = 10^2,label=as.character(as.expression(substitute(italic(R)^2~"="~r2,list(r2=round(fold.cor^2,digits=3))))),parse=TRUE,size=10)+
+%%     theme(axis.title.x = element_text(face="bold",size=30),
+%%           axis.text.x  = element_text(size=30),
+%%           axis.title.y = element_text(face="bold",size=30),
+%%           axis.text.y  = element_text(size=30,hjust=0)),
+%%         vp=viewport(layout.pos.row=2,layout.pos.col=i)        
+%%  )
+    
+    
+    
+    
+%% }
+%% @ 
 
 \section*{Figure 3}
-<<results='hide',fig.height=5,fig.width=12,label=figure-3,dependson=c("initialize"),echo=FALSE,warning=FALSE>>=
+<<results='hide',fig.show='hide',label=figure-3,dependson=c("initialize"),echo=FALSE,warning=FALSE>>=
 
 par(mfrow=c(1,2))
 
@@ -607,86 +635,6 @@ n10 <- ceiling(frac10*length(max.errors))
 \Sexpr{nrow(protein)}) have a maximum error exceeding two-fold.
 \Sexpr{100*frac10} percent of protein (\Sexpr{n10} of
 \Sexpr{nrow(protein)}) have a maximum error exceeding ten-fold.
-
-
-\section*{Supplement}
-
-<<label=pop-cor,dependson("initialize"),echo=TRUE,warning=FALSE>>=
-
-within.indices <- which(apply(!is.na(protein*predicted.raw),1,sum)>3)
-within.cors <- sapply(within.indices,function(i) cor(protein[i,],log(predicted.raw)[i,],use="pairwise.complete.obs"))
-between.cors <- sapply(1:ncol(protein),function(i) cor(protein[,i],log10(predicted.raw)[,i],use="pairwise.complete.obs"))
-between.cors.raw <- sapply(1:ncol(protein),function(i) cor(protein[,i],mrna[,i],use="pairwise.complete.obs"))
-
-n.pairwise <- rowSums(!is.na(protein*predicted.raw))
-n.pairwise <- n.pairwise[n.pairwise>3]
-ft <- fisher.transform(within.cors)
-
-wts <- 1/(n.pairwise-3)
-wts <- wts/sum(wts)
-z <- sum(wts*ft)
-pop.cor <- (exp(2*z)-1)/(exp(2*z)+1)
-
-z.score<- (ft-pop.cor)*sqrt(n.pairwise-3)
-
-fd.out <- fdrtool(z.score,plot=FALSE,verbose=FALSE)
-@ 
-
-%Number of q-values less than 1\%: \Sexpr{sum(fd.out$qval<0.01)}
-%Number of q-values less than 10\%: \Sexpr{sum(fd.out$qval<0.1)}
-
-<<fig.width=12,fig.height=4,fig.align='center',label=figure-S1, dependson("initialize"),echo=FALSE,warning=FALSE>>=
-
-grid.newpage()
-pushViewport(viewport(layout = grid.layout(1,3)))
-
-## within tissue correlations
-print(
-    ggplot(data.frame(x=between.cors,x2=between.cors.raw,labels=tissue.names))+geom_histogram(aes(x=x,fill="Scaled"),binwidth=0.03,colour="black",size=0.1)+geom_histogram(aes(x=x2,fill="Raw"),binwidth=0.03,colour="black",size=0.1)+scale_x_continuous(limits=c(-1,1))+labs(x=expression(paste("Correlation, ", R[T])),y="",title="Within Tissue, Empirical")+
-    theme(title = element_text(size=20),
-          axis.title.x = element_text(face="bold",size=25),
-          axis.text.x  = element_text(size=16),
-          axis.text.y  = element_text(size=16,hjust=0),
-          legend.text=element_text(size = 15, face = "bold"),
-          legend.position=c(0.15,0.85))+
-    guides(fill=guide_legend(title=NULL)),
-    vp=viewport(layout.pos.row=1,layout.pos.col=1)
-    )
-
-## within gene correlations
-print(
-ggplot(data.frame(x=within.cors))+geom_histogram(aes(x=x,fill="within"),colour="black",binwidth=0.05,size=0.1)+labs(x=expression(paste("Correlation, ", R[P])),y="",title="Across Tissue, Empirical")+
-    theme(title = element_text(size=20),
-          axis.title.x = element_text(face="bold",size=25),
-          axis.text.x  = element_text(size=16),
-          axis.text.y  = element_text(size=16,hjust=0)) +
-    scale_y_continuous(limits=c(0,300))+
-    guides(fill=FALSE),
-    vp=viewport(layout.pos.row=1,layout.pos.col=2)
-)
-
-
-## simulation within gene correlations
-sim.within.cors <- sapply(1:length(z.score),function(i) cor(rmvnorm(n=n.pairwise[i],mean=c(0,0),sigma=matrix(c(1,pop.cor,pop.cor,1),nrow=2)))[1,2])
-
-print(
-ggplot(data.frame(x=sim.within.cors))+geom_histogram(aes(x=x,fill="within"),colour="black",binwidth=0.05,size=0.1)+labs(x=expression(paste("Correlation, ", R[P])),y="",title=expression(paste("Across Tissue, Simulated (",rho,"=0.35)",sep="")))+
-    theme(title = element_text(size=20),
-          axis.title.x = element_text(face="bold",size=25),
-          axis.text.x  = element_text(size=16),
-          axis.text.y  = element_text(size=16,hjust=0)) +
-    scale_y_continuous(limits=c(0,300))+
-    guides(fill=FALSE),
-    vp=viewport(layout.pos.row=1,layout.pos.col=3)
-)
-@ 
-
-
-
-
-
-
-
 
 <<fig.width=6,fig.height=6,fig.align='center',label=figure-S2,dependson=("initalize"),echo=FALSE,warning=FALSE,>>=
 
